--- a/src/views/admin/managerUser.ejs
+++ b/src/views/admin/managerUser.ejs
@@ -13,7 +13,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
 
-    <base href:"ec2-54-251-18-129.ap-southeast-1.compute.amazonaws.com/">
+    <base href:"ec2-13-250-98-195.ap-southeast-1.compute.amazonaws.com:3000/">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alo Chat</title>
